--- a/Html/index.html
+++ b/Html/index.html
@@ -8,8 +8,8 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Simple Sidebar - Start Bootstrap Template</title>
-
+  <title>Mercon</title>
+  <link rel="shortcut icon" href="favicon.png">
   <!-- Bootstrap core CSS -->
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/bootstrap-select.min.css" rel="stylesheet">
@@ -56,9 +56,9 @@
 
       <!-- bar mobile -->
 
-      <nav class="navbar navbar-expand-lg navbar-light bg-light  d-md-none">
-        brak
-        <button class="btn btn-primary" id="menu-toggle">Toggle Menu</button>
+      <nav class="navbar navbar-expand-lg barmobile">
+
+        <button id="menu-toggle"><i data-feather="menu"></i></button>
       </nav>
       <!-- / bar mobile -->
 
@@ -69,17 +69,17 @@
             <h3>Starbuck Coffee Trading Sarl
               <span>John Mayers</span></h3>
             <div class="avatar">
-              <i data-feather="user"></i>
+              <img src="images/profile.png" alt="profile">
             </div>
           </div>
         </div>
         <div class="box">
           <form class="row mb-2 search-form">
-            <div class="form-group col-sm-3">
+            <div class="form-group col-lg-3 col-md-6 col-sm-12">
               <label>Mercon's Trade Number</label>
               <input type="email" class="form-control" placeholder="115622">
             </div>
-            <div class="form-group col-sm-3">
+            <div class="form-group col-lg-3 col-md-6 col-sm-12">
               <label>Origin</label>
               <div class="selectCustom">
                 <select data-live-search="true">
@@ -89,36 +89,38 @@
                 </select>
               </div>
             </div>
-            <div class="form-group col-sm-3">
+            <div class="form-group col-lg-3 col-md-6 col-sm-12">
               <label>Cilent's Ref</label>
               <input type="email" class="form-control" placeholder="115622">
             </div>
-            <div class="form-group col-sm-3">
-              <label style="opacity: 0;">button</label>
-              <div class="buttonSearch">
-                <button type="submit" class="btn btnPrimary">Search</button>
-                <button type="submit" class="btn btnOutline">Clear</button>
+            <div class="form-group col-lg-3 col-md-6 col-sm-12 justify-content-end">
+              <label style="opacity: 0; margin-bottom: 11px;" class="d-none d-md-block">button</label>
+              <div class="row justify-content-end">
+                <div class="col-lg-6 col-md-6 col-6">
+                  <button type="submit" class="btn btnPrimary">Search</button>
+                </div>
+                <div class="col-lg-6 col-md-6 col-6">
+                  <button type="submit" class="btn btnOutline">Clear</button>
+                </div>
               </div>
             </div>
           </form>
           <div class="table-responsive">
-            <table class="table table-custom mb-0">
+            <table id="example" class="table table-custom mb-0">
               <thead>
                 <tr>
                   <th style="width: 20%;">Mercon's Trade Number</th>
                   <th>Cilent's Ref</th>
-                  <th>Quality
-                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
+                  <th>Quality</th>
                   <th>Delivery Period</th>
                   <th>Bags</th>
                   <th></th>
                 </tr>
               </thead>
               <tbody>
-                <tr>
-                  <td><a href="#">1175472</a></td>
-                  <td>25697113</td>
+                <tr onclick="location.href='dashboad.html'">
+                  <td class="color1">1175472</td>
+                  <td class="color2">1175472</td>
                   <td>VIE-EPW 15/16 CP</td>
                   <td>Apr 2020</td>
                   <td>7360</td>
@@ -127,8 +129,8 @@
                   </td>
                 </tr>
                 <tr>
-                  <td><a href="#">1175472</a></td>
-                  <td>25697113</td>
+                  <td class="color1">1175472</td>
+                  <td class="color2">1175472</td>
                   <td>VIE-EPW 15/16 CP</td>
                   <td>Apr 2020</td>
                   <td>7360</td>
@@ -137,8 +139,8 @@
                   </td>
                 </tr>
                 <tr>
-                  <td><a href="#">1175472</a></td>
-                  <td>25697113</td>
+                  <td class="color1">1175472</td>
+                  <td class="color2">1175472</td>
                   <td>VIE-EPW 15/16 CP</td>
                   <td>Apr 2020</td>
                   <td>7360</td>
@@ -147,8 +149,8 @@
                   </td>
                 </tr>
                 <tr>
-                  <td><a href="#">1175472</a></td>
-                  <td>25697113</td>
+                  <td class="color1">1175472</td>
+                  <td class="color2">1175472</td>
                   <td>VIE-EPW 15/16 CP</td>
                   <td>Apr 2020</td>
                   <td>7360</td>
@@ -157,8 +159,8 @@
                   </td>
                 </tr>
                 <tr>
-                  <td><a href="#">1175472</a></td>
-                  <td>25697113</td>
+                  <td class="color1">1175472</td>
+                  <td class="color2">1175472</td>
                   <td>VIE-EPW 15/16 CP</td>
                   <td>Apr 2020</td>
                   <td>7360</td>
@@ -167,8 +169,8 @@
                   </td>
                 </tr>
                 <tr>
-                  <td><a href="#">1175472</a></td>
-                  <td>25697113</td>
+                  <td class="color1">1175472</td>
+                  <td class="color2">1175472</td>
                   <td>VIE-EPW 15/16 CP</td>
                   <td>Apr 2020</td>
                   <td>7360</td>
@@ -211,7 +213,6 @@
   <script src="js/apexcharts.min.js"></script>
   <script src="js/dashboard.js"></script>
   <script src="js/main.js"></script>
-
 </body>
 
 </html>
