--- a/Html/General.html
+++ b/Html/General.html
@@ -65,7 +65,8 @@
       <div class="container">
         <div class="title">
           <div class="links">
-            <h3><a href="#"><i data-feather="chevron-left"></i></a> Purchase <span class="colorPrimary">12346</span> </h3>
+            <h3><a href="#"><i data-feather="chevron-left"></i></a> Purchase <span class="colorPrimary">12346</span>
+            </h3>
             <a href="">PSS Infomation</a>
           </div>
           <div class="user">
@@ -76,31 +77,263 @@
             </div>
           </div>
         </div>
-        <div class="row">
-          <div class="col-xs-12 ">
-            <nav>
-              <div class="nav nav-tabs nav-fill" id="nav-tab" role="tablist">
-                <a class="nav-item nav-link active" id="nav-home-tab" data-toggle="tab" href="#nav-home" role="tab" aria-controls="nav-home" aria-selected="true">General</a>
-                <a class="nav-item nav-link" id="nav-profile-tab" data-toggle="tab" href="#nav-profile" role="tab" aria-controls="nav-profile" aria-selected="false">Shipment</a>
-                <a class="nav-item nav-link" id="nav-contact-tab" data-toggle="tab" href="#nav-contact" role="tab" aria-controls="nav-contact" aria-selected="false">Container</a>              
-              </div>
-            </nav>
-            <div class="tab-content py-3 px-3 px-sm-0" id="nav-tabContent">
-              <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
-                Et et consectetur ipsum labore excepteur est proident excepteur ad velit occaecat qui minim occaecat veniam. Fugiat veniam incididunt anim aliqua enim pariatur veniam sunt est aute sit dolor anim. Velit non irure adipisicing aliqua ullamco irure incididunt irure non esse consectetur nostrud minim non minim occaecat. Amet duis do nisi duis veniam non est eiusmod tempor incididunt tempor dolor ipsum in qui sit. Exercitation mollit sit culpa nisi culpa non adipisicing reprehenderit do dolore. Duis reprehenderit occaecat anim ullamco ad duis occaecat ex.
-              </div>
-              <div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab">
-                Et et consectetur ipsum labore excepteur est proident excepteur ad velit occaecat qui minim occaecat veniam. Fugiat veniam incididunt anim aliqua enim pariatur veniam sunt est aute sit dolor anim. Velit non irure adipisicing aliqua ullamco irure incididunt irure non esse consectetur nostrud minim non minim occaecat. Amet duis do nisi duis veniam non est eiusmod tempor incididunt tempor dolor ipsum in qui sit. Exercitation mollit sit culpa nisi culpa non adipisicing reprehenderit do dolore. Duis reprehenderit occaecat anim ullamco ad duis occaecat ex.
-              </div>
-              <div class="tab-pane fade" id="nav-contact" role="tabpanel" aria-labelledby="nav-contact-tab">
-                Et et consectetur ipsum labore excepteur est proident excepteur ad velit occaecat qui minim occaecat veniam. Fugiat veniam incididunt anim aliqua enim pariatur veniam sunt est aute sit dolor anim. Velit non irure adipisicing aliqua ullamco irure incididunt irure non esse consectetur nostrud minim non minim occaecat. Amet duis do nisi duis veniam non est eiusmod tempor incididunt tempor dolor ipsum in qui sit. Exercitation mollit sit culpa nisi culpa non adipisicing reprehenderit do dolore. Duis reprehenderit occaecat anim ullamco ad duis occaecat ex.
-              </div>
-            
-            </div>
-          
-          </div>
-        </div>
+        <div class="tabs">
 
+          <nav>
+            <div class="nav nav-fill" id="nav-tab" role="tablist">
+              <a class="nav-item nav-link active" id="nav-home-tab" data-toggle="tab" href="#nav-home" role="tab"
+                aria-controls="nav-home" aria-selected="true"><i data-feather="file-text"></i> General</a>
+              <a class="nav-item nav-link" id="nav-profile-tab" data-toggle="tab" href="#nav-profile" role="tab"
+                aria-controls="nav-profile" aria-selected="false"><i data-feather="trending-up"></i> Shipment</a>
+              <a class="nav-item nav-link" id="nav-contact-tab" data-toggle="tab" href="#nav-contact" role="tab"
+                aria-controls="nav-contact" aria-selected="false"><i data-feather="truck"></i> Container</a>
+            </div>
+          </nav>
+          <div class="tab-content mt-4" id="nav-tabContent">
+            <!-- General -->
+            <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
+              <div class="row">
+                <div class="col-lg-4 col-md-12 col-sm-12">
+                  <div class="box">
+                    <div class="font-weight-semibold">Info</div>
+                    <hr>
+                    <ul class="infoNumber">
+                      <li class="row">
+                        <label class="col-5">Trade Number</label>
+                        <div class="col-7">
+                          5967692
+                        </div>
+                      </li>
+                      <li class="row">
+                        <label class="col-5">Reference</label>
+                        <div class="col-7">
+                          12
+                        </div>
+                      </li>
+                      <li class="row">
+                        <label class="col-5">Crop</label>
+                        <div class="col-7">
+                          Crop
+                        </div>
+                      </li>
+                      <li class="row">
+                        <label class="col-5">Price</label>
+                        <div class="col-7">
+                          1.49 USD/Lb
+                        </div>
+                      </li>
+                      <li class="row">
+                        <label class="col-5">Total Bags</label>
+                        <div class="col-7">
+                          5967692
+                        </div>
+                      </li>
+                      <li class="row">
+                        <label class="col-5">Destination</label>
+                        <div class="col-7">
+                          Open
+                        </div>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+                <div class="col-lg-4 col-md-12 col-sm-12">
+                  <div class="box">
+                    <div class="font-weight-semibold">Coffee Quaity</div>
+                    <hr>
+                    Et et consectetur ipsum labore excepteur est proident excepteur ad velit occaecat qui minim
+                    occaecat
+                    veniam. Fugiat veniam incididunt anim aliqua enim pariatur veniam sunt est aute sit dolor anim.
+                    Velit
+                    non irure adipisicing aliqua ullamco irure incididunt irure non esse consectetur nostrud minim
+                    non
+
+                  </div>
+                </div>
+                <div class="col-lg-4 col-md-12 col-sm-12">
+                  <div class="box">
+                    <div class="font-weight-semibold">Notes</div>
+                    <hr>
+                    Et et consectetur ipsum labore excepteur est proident excepteur ad velit occaecat qui minim
+                    occaecat
+
+                    minim occaecat. Amet duis do nisi duis veniam non est eiusmod tempor incididunt tempor dolor
+                    ipsum in
+                    qui sit. Exercitation mollit sit culpa nisi culpa non adipisicing reprehenderit do dolore. Duis
+                    reprehenderit occaecat anim ullamco ad duis occaecat ex.
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- Shipment -->
+            <div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab">
+              <div class="row">
+                <div class="col-lg-4 col-md-12 col-sm-12">
+                  <div class="box">
+                    <div class="font-weight-semibold">Info</div>
+                    <hr>
+                    <ul class="infoNumber">
+                      <li class="row">
+                        <label class="col-5">Bill of lading</label>
+                        <div class="col-7 linkfile">
+                          5967692
+                          <button class="btn btnPrimary" href=""><i data-feather="file"></i></button>
+                        </div>
+                      </li>
+                      <li class="row">
+                        <label class="col-5">Bokking #</label>
+                        <div class="col-7">
+                          12
+                        </div>
+                      </li>
+                      <li class="row">
+                        <label class="col-5">Vessel</label>
+                        <div class="col-7">
+                          Crop
+                        </div>
+                      </li>
+                      <li class="row">
+                        <label class="col-5">Duration </label>
+                        <div class="col-7">
+                          1.49 USD/Lb
+                        </div>
+                      </li>
+                      <li class="row">
+                        <label class="col-5">Requested ETS</label>
+                        <div class="col-7">
+                          5967692
+                        </div>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+                <div class="col-lg-4 col-md-12 col-sm-12">
+                  <div class="box">
+
+                    <div class="text-center mt-3 progressDays">
+                      <svg width="140" height="140" viewBox="0 0 120 120">
+                        <circle cx="60" cy="60" r="54" fill="none" stroke="#e6e6e6" stroke-width="7" />
+                        <circle cx="60" cy="60" r="54" fill="none" stroke="#A3CF60" stroke-width="7"
+                          stroke-linecap="round" stroke-dasharray="339.292" stroke-dashoffset="120" />
+                      </svg>
+                      <span class="text">
+                        25 <span>days left</span>
+                      </span>
+                    </div>
+                    <div class="shipmentprogress">
+                      <span class="ttboat" style="margin-left: 35%;"><img src="images/boat.svg"></span>
+                      <div class="progress">
+                        <div class="progress-bar" role="progressbar" style="width: 35%" aria-valuenow="35"
+                          aria-valuemin="0" aria-valuemax="100"></div>
+                      </div>
+                      <div class="days">
+                        <div class="text-left" >
+                          Santos <span>2020-05-11</span>
+                        </div>
+                        <div class="text-right">
+                          Savannah <span>2020-05-11</span>
+                        </div>
+                      </div>
+                    </div>
+
+
+                  </div>
+                </div>
+                <div class="col-lg-4 col-md-12 col-sm-12">
+                  <div class="box">
+
+                    <ul class="infoNumber">
+                      <li class="row">
+                        <label class="col-5">Date of dispatched</label>
+                        <div class="col-7">
+                          5967692
+                        </div>
+                      </li>
+                      <li class="row">
+                        <label class="col-5">Dispatch AWB </label>
+                        <div class="col-7">
+                          12
+                        </div>
+                      </li>
+                      <li class="row">
+                        <label class="col-5">Sent Method</label>
+                        <div class="col-7">
+                          Crop
+                        </div>
+                      </li>
+                      <li class="row">
+                        <label class="col-5">Docs arrival </label>
+                        <div class="col-7">
+                          5967692
+                        </div>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- Container -->
+            <div class="tab-pane fade" id="nav-contact" role="tabpanel" aria-labelledby="nav-contact-tab">
+              <div class="box">
+                <div class="row">
+                  <div class="col-12">
+                    <div class="table-responsive">
+                      <table id="example" class="table table-custom mb-0">
+                        <thead>
+                          <tr>
+                            <th>Container</th>
+                            <th>ICO</th>
+                            <th>Waregouse ID</th>
+                            <th>Date </th>
+                            <th>UOM </th>
+                            <th>Bags </th>
+                          </tr>
+                        </thead>
+                        <tbody>
+                          <tr>
+                            <td>MEDU 667728 </td>
+                            <td>25697113</td>
+                            <td>25697113</td>
+                            <td>MEDU 667728 </td>
+                            <td>25697113</td>
+                            <td>25697113</td>
+                          </tr>
+                          <tr>
+                            <td>MEDU 667728 </td>
+                            <td>25697113</td>
+                            <td>25697113</td>
+                            <td>MEDU 667728 </td>
+                            <td>25697113</td>
+                            <td>25697113</td>
+                          </tr>
+                          <tr>
+                            <td>MEDU 667728 </td>
+                            <td>25697113</td>
+                            <td>25697113</td>
+                            <td>MEDU 667728 </td>
+                            <td>25697113</td>
+                            <td>25697113</td>
+                          </tr>
+                          <tr class="last">
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td align="right" class="font-weight-semibold">Total Bags </td>
+                            <td class="font-weight-semibold">1234</td>
+                          </tr>
+                        </tbody>
+                      </table>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+
+
+        </div>
       </div>
     </div>
     <!-- /#page-content-wrapper -->
