--- a/Html/chat.html
+++ b/Html/chat.html
@@ -254,6 +254,7 @@
     <!-- /#page-content-wrapper -->
 
   </div>
+  <div class="copyright">© 2020 Mercon Coffee Corp</div>
   <!-- /#wrapper -->
 
   <!-- Bootstrap core JavaScript -->
