--- a/Html/index.html
+++ b/Html/index.html
@@ -125,7 +125,7 @@
                   <td>Apr 2020</td>
                   <td>7360</td>
                   <td>
-                    <div class="status status-apr">Approved</div>
+                    <div class="status status-apr">Approved<span class="note">3</span></div>
                   </td>
                 </tr>
                 <tr>
@@ -135,7 +135,7 @@
                   <td>Apr 2020</td>
                   <td>7360</td>
                   <td>
-                    <div class="status status-pending">Pending</div>
+                    <div class="status status-pending">Pending<span class="note">3</span></div>
                   </td>
                 </tr>
                 <tr>
@@ -204,6 +204,7 @@
     <!-- /#page-content-wrapper -->
 
   </div>
+  <div class="copyright">© 2020 Mercon Coffee Corp</div>
   <!-- /#wrapper -->
 
   <!-- Bootstrap core JavaScript -->
