--- a/Html/about.html
+++ b/Html/about.html
@@ -42,6 +42,18 @@
         <a href="#">
           <i data-feather="message-square"></i>
           Chat</a>
+          <div class="client dropright">
+            <a type="button" id="clientMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <i data-feather="users"></i>
+              Client
+            </a>
+            </a>
+            <div class="dropdown-menu clientGroup" aria-labelledby="clientMenuButton">
+              <a class="dropdown-item" href="#">Action</a>
+              <a class="dropdown-item" href="#">Another action</a>
+              <a class="dropdown-item" href="#">Something else here</a>
+            </div>
+          </div>
         <a href="#">
           <i data-feather="hexagon"></i>
           App</a>
