--- a/Html/index.html
+++ b/Html/index.html
@@ -42,6 +42,25 @@
         <a href="#">
           <i data-feather="message-square"></i>
           Chat</a>
+
+
+        <div class="client dropright">
+          <a type="button" id="clientMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <span><i data-feather="users"></i>
+              Client </span>
+            <i data-feather="chevron-right"></i>
+          </a>
+          </a>
+          <div class="dropdown-menu clientGroup" aria-labelledby="clientMenuButton">
+            <a class="dropdown-item" href="#">Adelia</a>
+            <a class="dropdown-item" href="#">Antaram</a>
+            <a class="dropdown-item" href="#">Cleopatra</a>
+            <a class="dropdown-item" href="#">Guinevere</a>
+            <a class="dropdown-item" href="#">Another action</a>
+            <a class="dropdown-item" href="#">SMorela</a>
+          </div>
+        </div>
+
         <a href="#">
           <i data-feather="hexagon"></i>
           App</a>
